--- a/gpt/index.html
+++ b/gpt/index.html
@@ -1,1 +1,18 @@
-...
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sudoku</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="sudoku-container">
+        <h1>Sudoku</h1>
+        <div id="sudoku-board"></div>
+        <button id="solve-btn">Lösen</button>
+        <button id="reset-btn">Zurücksetzen</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
